--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2852,6 +2852,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 153: June 2 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/erlik-machine-writeup-4565f27a5695" target="_blank">Tryhackme Erlik Machine Writeup</a> : Anil Yelken <br><br>
+            <a href="https://medium.com/@kojodaprogrammer/sql-injection-to-remote-command-execution-rce-dd9a75292d1d" target="_blank">SQL injection to Remote Command Execution (RCE)</a> : Kwadwo Amoako <br><br>
+            <a href="https://shehackske.medium.com/how-i-got-access-of-a-vulnerable-site-through-session-hijacking-9ec27f00ea77" target="_blank">HOW I GOT ACCESS OF A VULNERABLE SITE THROUGH SESSION HIJACKING</a> : SheHacks_KE <br><br>
+            <a href="https://natnat1.medium.com/cyber-apocalypse-2022-ctf-writeup-638ac49b797a" target="_blank">rev_wide — cyber apocalypse 2022 (CTF writeup)</a> : Nata chikhinashvili <br><br>
+            <a href="https://valsamaras.medium.com/the-toddlers-introduction-to-dynamic-memory-allocation-300f312cd2db" target="_blank">The toddler’s introduction to Dynamic Memory Allocation</a> : +Ch0pin🕷️ <br><br>
+          </p>    
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
