--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2870,6 +2870,23 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 154: June 3 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Fantastic</a> : Offensive Security Proving Grounds (Practice) <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://swanandx.github.io/blog/posts/writeups/thm/binaryheaven/" target="_blank">Binary Heaven Walk-through</a> swanandx <br><br>
+            <a href="https://swanandx.github.io/blog/posts/re/ctfs/" target="_blank">Reversing Binaries: CTF Edition</a> : swanandx <br><br>
+            <a href="https://swanandx.github.io/blog/posts/re/keygen/" target="_blank">Reversing Binaries: Key generators</a> : swanandx <br><br>
+            <a href="https://myvisa.medium.com/walkthrough-of-insecure-deserialization-pentesteracademy-9c4836d420ff" target="_blank">Walkthrough of “Insecure Deserialization”- PentesterAcademy</a> : ViSa <br><br>
+          </p>    
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
