--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2887,6 +2887,8 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 154: June 4 - Day 155: June 5</h3>
+      <p>Break Days</p> <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
