--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2901,10 +2901,10 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 154: June 4 - Day 155: June 5</h3>
+      <h3>Day 155: June 4 - Day 156: June 5</h3>
       <p>Break Days</p> <br><br>
       <h2 id="week23">Week 23</h2> <br><br><br>
-      <h3>Day 156: June 6 2022</h3><br>
+      <h3>Day 157: June 6 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -2918,6 +2918,26 @@
             <a href="https://vinsloev.medium.com/cyber-kill-chain-military-approach-to-cyber-attacks-and-defense-594246b4886" target="_blank">Cyber Kill Chain — Military approach to cyber attacks and defense</a> : Vinsloev <br><br>
             <a href="https://0xshakhawat.medium.com/networking-protocols-explained-cybersecurity-4575e40403e7" target="_blank">Networking Protocols Explained | CyberSecurity</a> : Shakhawat Hossain <br><br>
             <a href="https://www.jigsawacademy.com/blogs/cyber-security/digital-forensics/" target="_blank">Digital Foresnics - An Easy Guide For Beginners in 2021</a> : Ajay Sarangam <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 158: June 7 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/challenges/157" target="_blank">Chase</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/challenges/158" target="_blank">Event Horizon</a> : HackTheBox <br><br>
+            <a href="https://app.hackthebox.com/challenges/159" target="_blank">Export</a> : HackTheBox <br><br>
+            <a href="https://academy.hackthebox.com/module/details/49" target="_blank">Windows Fundamentals</a> : HackTheBox Academy <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@Sm9l/what-i-learnt-from-reading-126-information-disclosure-writeups-d896c5d5a2a4" target="_blank">What I learned from reading 126* Information Disclosure Writeups</a> : Sm9l <br><br>
+            <a href="https://medium.com/@bdemir/anatomy-of-the-authentication-tests-df98ad0778a5" target="_blank">Anatomy of Authentication Tests</a> : Bursa Demir <br><br>
+            <a href="https://medium.com/@lowin_/operating-systems-a269ba19eea7" target="_blank">Operating Systems</a> : Lowin <br><br>
+            <a href="https://medium.com/@gaius4888/what-i-learnt-from-building-a-homelab-21b20b65c3aa" target="_blank">What I learnt from building a homelab</a> : Gaius Chan <br><br>
           </p>      
         <br><br>
       </p>
