--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -91,7 +91,7 @@
           </li>
           <li class="nav-item">
             <div class="dropdown">
-              <button class="dropbtn">May</button>
+              <button class="dropbtn">June</button>
               <div class="dropdown-content">
                 <a href="#week23">Week 23</a>
                 <!--
@@ -2938,6 +2938,25 @@
             <a href="https://medium.com/@bdemir/anatomy-of-the-authentication-tests-df98ad0778a5" target="_blank">Anatomy of Authentication Tests</a> : Bursa Demir <br><br>
             <a href="https://medium.com/@lowin_/operating-systems-a269ba19eea7" target="_blank">Operating Systems</a> : Lowin <br><br>
             <a href="https://medium.com/@gaius4888/what-i-learnt-from-building-a-homelab-21b20b65c3aa" target="_blank">What I learnt from building a homelab</a> : Gaius Chan <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 159: June 8 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Batarina</a> : Offensive Security Proving Grounds (Practice) <br><br>
+            PWK Course <br><br>
+            <a href="https://tryhackme.com/room/breachingad" target="_blank">Breaching AD</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@zunmun/my-grind-to-oscp-233637c101cc" target="_blank">My Grind to OSCP</a> : Hackin7 <br><br>
+            <a href="https://medium.com/@jcngan97/zero-to-almost-hero-to-hero-my-oscp-journey-2022-fc2ad62b1d59" target="_blank">Zero to almost hero to hero: My OSCP Journey 2022</a> : Ji Cheng <br><br>
+            <a href="https://hcibo.medium.com/my-pentest-log-21-content-type-checks-9bbbaa655097" target="_blank">My Pentest Log -21 — (Content-Type Checks)</a> : Hamit CİBO <br><br>
+            <a href="https://medium.com/@Scofield_Idehen/seven-things-a-cyber-security-enthusiast-should-know-8cbe0e04dda" target="_blank">Seven Things a Cyber-Security Enthusiast Should Know</a> : Scofield O. Idehen <br><br>
           </p>      
         <br><br>
       </p>
