--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2961,6 +2961,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 160: June 9 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            PWK Course <br><br>
+            <a href="https://tryhackme.com/room/breachingad" target="_blank">Breaching AD</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://noob3xploiter.medium.com/behind-the-bug-password-reset-poisoning-f5a51d890260" target="_blank">Behind the Bug: Password reset poisoning</a> : Brandon Rolden <br><br>
+            <a href="https://noob3xploiter.medium.com/idor-in-support-mozilla-org-through-code-review-ff2aa8ea1201" target="_blank">IDOR in support.mozilla.org through Code Review</a> : Brandon Rolden <br><br>
+            <a href="https://medium.com/@pankajk.1540/all-about-404-bypass-fedb5371335e" target="_blank">All About 403 Bypass</a> : Pankaj <br><br>
+            <a href="https://medium.com/@joemcfarland/hacking-the-skynet-mainframe-and-preventing-judgement-day-7c6d30673b0f" target="_blank">Hacking The Skynet Mainframe and Preventing Judgement Day</a> : HaXeZ - Simplified Cybersecurity <br><br>
+            <a href="https://systemweakness.com/exploiting-buffer-overflows-on-tryhackme-b044224fef10" target="_blank">Exploiting Buffer Overflows on</a> : HaXeZ - Simplified Cybersecurity <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
