--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2980,6 +2980,23 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 161: June 10 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/challenges/160" target="_blank">Insider</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@f4zi/pwning-binaries-and-defeating-modern-mitigations-using-rop-and-ret2libc-foobar-2022-pwn-writeup-ae0ea6e5e92">Pwning binaries and defeating modern mitigations using rop and ret2libc (foobar 2022 pwn writeup)</a> : F4zi <br><br>
+            <a href="https://valsamaras.medium.com/introduction-to-x64-linux-binary-exploitation-part-1-14ad4a27aeef" target="_blank">Introduction to x64 Linux Binary Exploitation (Part 1)</a> : +Ch0pin🕷️ <br><br>
+            <a href="https://medium.com/@two06/solving-a-simple-buffer-overflow-with-pwntools-575a37e4ddb1" target="_blank">Solving a simple buffer overflow with pwntools</a> : James <br><br>
+            <a href="https://medium.com/@asheet.tirkey2/my-first-bug-submission-xss-vulnerability-4e630da86637" target="_blank">My first bug submission: XSS vulnerability</a> : Asheet Tirkey <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
