--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -2997,6 +2997,25 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 162: June 11 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://www.youtube.com/playlist?list=PLeSXUd883dhjmKkVXSRgI1nJEZUDzgLf_" target="_blank">Pwn Zero To Hero</a> : PinkDraconian <br><br>
+            <a href="https://www.udemy.com/course/security-601-exams/" target="_blank">Security+</a> : Jason Dion <br><br> 
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://valsamaras.medium.com/introduction-to-x64-binary-exploitation-part-2-return-into-libc-c325017f465" target="_blank">Introduction to x64 Linux Binary Exploitation (Part 2)—return into libc</a> : +Ch0pin🕷️ <br><br>
+            <a href="https://mostafaelserogy.medium.com/proving-grounds-potato-f6113df86b09" target="_blank">Offsec proving grounds: potato</a> : Mostafa Elserogy <br><br>
+            <a href="https://medium.com/@cron-swanson/tamu-ctf-2022-writeup-web-lock-out-e3cab36934f7" target="_blank">TAMU CTF 2022 Writeup — Web: Lock Out</a> : cron-swanson <br><br>
+            <a href="https://hcibo.medium.com/my-pentest-log-6-18fa722e56fe" target="_blank">My Pentest Log -6- (Bypass Powerpoint Password + Information Disc.)</a> : Hamit CİBO <br><br>
+            <a href="https://www.bleepingcomputer.com/news/security/new-symbiote-malware-infects-all-running-processes-on-linux-systems/amp/" target="_blank">New Symbiote malware infects all running processes on Linux systems</a> bleepingcomputer <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
