--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3016,6 +3016,16 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 162: June 11 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://app.hackthebox.com/challenges/162" target="_blank">Logger</a> : HackTheBox <br><br>
+            Security+ <br><br>
+          </p>    
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
