--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3016,13 +3016,33 @@
         <br><br>
       </p>
       <br><br>
-      <h3>Day 162: June 11 2022</h3><br>
+      <h3>Day 163: June 12 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
             <a href="https://app.hackthebox.com/challenges/162" target="_blank">Logger</a> : HackTheBox <br><br>
             Security+ <br><br>
           </p>    
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 164: June 13 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://academy.hackthebox.com/module/details/49" target="_blank">Windows Fundamentals</a> : HackTheBox Academy <br><br>
+            PWK Course <br><br>
+            <a href="https://app.hackthebox.com/machines/160" target="_blank">Curling</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://musyokaian.medium.com/mr-phisher-tryhackme-walkthrough-5515f49546b2" target="_blank">Mr. Phisher TryHackMe Walkthrough</a> : Musyoka Ian <br><br>
+            <a href="https://medium.com/@the_harvester/forensics-of-windows-registry-88c54ac1fb42" target="_blank">Forensics Of Windows Registry</a> : Ansh Vaid <br><br>
+            <a href="https://medium.com/@the_harvester/getting-started-with-cyber-forensics-7e6b89405fb5" target="_blank">Getting Started With Cyber Forensics</a> : Ansh Vaid <br><br>
+            <a href="https://lime1o1.medium.com/welcome-everybody-2696f0409289" target="_blank">Kerberos Domain Username Enumeration</a> : Lime101 <br><br>
+            <a href="https://rajlegovinda.medium.com/we-need-to-know-session-hijacking-dcaf45c872fc" target="_blank">We Need To Know Session Hijacking</a> : RAJLE GOVINDA <br><br>
+          </p>      
         <br><br>
       </p>
       <br><br>
