--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3046,6 +3046,23 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 165: June 14 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Twiggy</a> : Offensive Security Proving Grounds (Practice) <br><br>
+            <a href="https://tryhackme.com/room/breachingad" target="_blank">Breaching AD</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://valsamaras.medium.com/introduction-to-x64-binary-exploitation-part-2-return-into-libc-c325017f465" target="_blank">Introduction to x64 Linux Binary Exploitation (Part 2)—return into libc</a> : +Ch0pin🕷️ <br><br>
+            <a href="https://palanioffcl.medium.com/understanding-memories-binex-1-d3ffc27f5c72" target="_blank">Binary Exploitation</a> : Palani <br><br>
+            <a href="https://palanioffcl.medium.com/examining-memory-of-simple-c-program-681ec42aef3f" target="_blank">Examining Memory of Simple C Program</a> : Palani <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
