--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3063,6 +3063,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 166: June 15 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/breachingad" target="_blank">Breaching AD</a> : TryHackMe <br><br>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/how-i-found-a-critical-bug-in-instagram-and-got-49500-bounty-from-facebook-626ff2c6a853" target="_blank">How I found a Critical Bug in Instagram and Got 49500$ Bounty From Facebook</a> : Neeraj Sharma <br><br>
+            <a href="https://systemweakness.com/practical-malware-analysis-lab-1-78de70e0d8f5" target="_blank">Practical malware analysis — Lab 1</a> : Martin Martinez <br><br>
+            <a href="https://medium.com/@tp4348/investigating-windows-registries-b0a0e8d10835" target="_blank">Investigating Windows registries</a> : Teodor Jazen Podobnik <br><br>
+            <a href="https://takahiro-oda.medium.com/malware-analysis-bootcamp-d4ef66a04a34" target="_blank">[Malware Analysis Bootcamp] Let’s start your first malware analysis!!</a> : Takahiro Oda <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
