--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3081,6 +3081,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 167: June 16 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/breachingad" target="_blank">Breaching AD</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://medium.com/@KhalilAfridii/digital-forensic-most-commonly-used-tools-4a9dbb98f926" target="_blank">Digital Forensic — Most Commonly used Tools</a> : Khalil Afridi <br><br>
+            <a href="https://fox9ix.medium.com/vulnhub-fristileaks-1-3-73d5d50ae38" target="_blank">[VulnHub] Fristileaks: 1.3</a> : Fox9ix <br><br>
+            <a href="https://medium.com/@withamankr/first-bounty-of-150-cbcd78d1c538" target="_blank">I was awarded a $150 bounty</a> : Aman <br><br>
+            <a href="https://systemweakness.com/dc-3-vulnhub-a86822f175fa" target="_blank">DC-3 - VulnHub</a> : Abdul Wassay <br><br>
+            <a href="https://brcyrr.medium.com/recommendations-of-oscp-433a08c86f27" target="_blank">Recommendations of OSCP</a> : Burcy YARAR <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
