--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -94,8 +94,8 @@
               <button class="dropbtn">June</button>
               <div class="dropdown-content">
                 <a href="#week23">Week 23</a>
+                <a href="#week24">Week 24</a>
                 <!--
-                <a href="#week19">Week 19</a>
                 <a href="#week20">Week 20</a>
                 <a href="#week21">Week 21</a>
                 <a href="#week22">Week 22</a>
@@ -3016,6 +3016,7 @@
         <br><br>
       </p>
       <br><br>
+      <h2 id="week24">Week 24</h2> <br><br><br>
       <h3>Day 163: June 12 2022</h3><br>
       <p>
         <h5>My Activities</h5>
@@ -3095,6 +3096,25 @@
             <a href="https://medium.com/@withamankr/first-bounty-of-150-cbcd78d1c538" target="_blank">I was awarded a $150 bounty</a> : Aman <br><br>
             <a href="https://systemweakness.com/dc-3-vulnhub-a86822f175fa" target="_blank">DC-3 - VulnHub</a> : Abdul Wassay <br><br>
             <a href="https://brcyrr.medium.com/recommendations-of-oscp-433a08c86f27" target="_blank">Recommendations of OSCP</a> : Burcy YARAR <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 168: June 17 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/breachingad" target="_blank">Breaching AD</a> : TryHackMe <br><br>
+            PWK Course <br><br>
+            <a href="https://app.hackthebox.com/machines/118" target="_blank">Bashed</a> : HackTheBox <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://www.jhaddix.com/post/a-hackers-guide-to-finding-cybersecurity-jobs" target="_blank">A hackers guide to FINDING cybersecurity jobs</a> : Jason Haddix <br><br>
+            <a href="https://medium.com/@saket590/how-i-have-identified-vulnerabilities-in-a-college-website-5d8f13787310" target="_blank">How I have identified vulnerabilities in a college website?</a> : Saket Acharya <br><br>
+            <a href="https://yevhsec1.medium.com/implementing-application-security-on-your-project-72b4453464a2" target="_blank">Implementing Application Security on your project</a> : YevhSec1 <br><br>
+            <a href="https://medium.com/course-reviews/elearnsecurity-digital-forensics-professional-9ed8d525d931" target="_blank">eLearnSecurity: Digital Forensics Professional</a> : Chris Eastwood <br><br>
           </p>      
         <br><br>
       </p>
