--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3119,6 +3119,31 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 169: June 18 2022</h3><br>
+      <p>Break Day</p><br><br>
+      <h2 id="week25">Week 25</h2> <br><br><br>
+      <h3>Day 170: June 19 2022 - Day 171: June 20 2022</h3><br>
+      <p>Break Days</p><br><br>
+      <h3>Day 172: June 21 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/breachingad" target="_blank">Breaching AD</a> : TryHackMe <br><br>
+            PWK Course <br><br>
+            <a href="https://portal.offensive-security.com/proving-grounds/practice" target="_blank">Exfiltrated</a> : Offensive Security Proving Grounds (Practice) <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p> 
+            <a href="https://infosecwriteups.com/ldap-in-active-directory-f0de5729f72f" target="_blank">LDAP in Active Directory</a> : Hacktivities <br><br>
+            <a href="https://medium.com/@milanjain7906/how-to-bypass-captcha-3ca00389e0ac" target="_blank">How to bypass Captcha</a> : Milanjain <br><br>
+            <a href="https://medium.com/@riddu.sarav/how-i-found-a-no-rate-limit-bug-9e347967d14c" target="_blank">How I found a No Rate Limit bug</a> : Riddu Sarav <br><br>
+            <a href="https://al1z4deh.medium.com/tryhackme-different-ctf-9f04ad84ab74" target="_blank">TryHackMe: Different CTF</a> : Al1z4deh:~# echo "Welcome" <br><br>
+            <a href="https://xcellerator.github.io/posts/linux_rootkits_01/" target="_blank">Linux Rootkits Part 1: Introduction and Workflow</a> : TheXcellerator <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
