--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
           <li class="nav-item">
             <a class="nav-link" href="/WebPages/daily-2022.html" target="_blank">DAILY</a>
           </li>
-          <!---
           <li class="nav-item">
-            <a class="nav-link" href="#projects">PROJECTS</a>
+            <a class="nav-link" href="/WebPages/blogs.html" target="_blank">BLOGS</a>
           </li>
+          <!---
           <li class="nav-item">
             <a class="nav-link" href="#work-exp">WORK-EXP</a>
           </li>
@@ -58,7 +58,6 @@
         <a href="https://www.linkedin.com/in/adityadindi/" target="_blank"><img src="/img/linkedln-img.png" class="img-fluid round" style="width:50px; height:50px"></a>&nbsp;<a href="https://github.com/Pyrus369" target="_blank"><img src="/img/github-img.png" class="img-fluid round" style="width:50px; height:50px"></a><a href="https://twitter.com/Pyrus369" target="_blank"><img src="/img/twitter-img.png" class="img-fluid round" style="width:50px; height:50px"></a><br><br><br><br>
         <h1 id="projects" style="color:DodgerBlue">PROJECTS</h1> <br>
       <small class="text-muted lead"><strong><!--<a href="/" class="text-decoration-none" target="_blank">-->Cyber Security Homelab</strong></a></small> <br><br>
-      <small class="text-muted lead"><strong><a href="https://hackersarcade.medium.com/noobs-guide-to-web-application-penetration-testing-e3ae921d57d1" class="text-decoration-none" target="_blank">Web Application Hacking Guide</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Personal Website</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/WebPages/daily-2021.html" class="text-decoration-none" target="_blank">Daily Hacking Challenge 2021 / Daily Hacking Guide (Resources)</a></strong></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://writeups.adityadindi.com" class="text-decoration-none" target="_blank">Capture The Flag Writeups</strong></a></small> <br><br>
@@ -74,7 +73,7 @@
         Hackers Arcade contributed and is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.
       </p>
       <br><br>
-      <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/comptia.png" alt="COMPTIA" width="250" height="250"></a><br><br>
+      <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/comptia.png" alt="COMPTIA" width="200" height="200"></a><br><br>
       <p class="lead" style="color:red"><strong>(2022 - Current) Deputy Secretary at CompTIA Student Chapter, University of Texas at San Antonio</strong></p>
       <p>
         Serving as the Deputy Secretary at UTSA’s CompTIA Student Chapter club, the most outstanding new student organization in 2021 at UTSA.
@@ -88,12 +87,6 @@
         school computers on a weekly basis. Helped keep all computer systems in the school available with little to no downtime.
       </p>
       -->
-      <br><br>
-      <h1 id="skills" style="color:DodgerBlue">MY SKILLS</h1> <br>
-      <p class="lead">Web Application Hacking</p>
-      <p class="lead">Problem-Solving Skills</p>
-      <p class="lead">Working in a Team</p>
-      <p class="lead">Communication Skills</p>
       <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div>
