--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3144,6 +3144,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 173: June 22 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            HackTheBox Meetup <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/telangana-andhra-pradesh-karnataka-himachal-pradesh-kerala-all-government-bus-services-were-885b44c21a" target="_blank">Telangana, Andhra Pradesh, Karnataka, Himachal Pradesh & Kerala — All Government bus services were hacked</a> : Krishnadev P Melevila <br><br>
+            <a href="https://infosecwriteups.com/what-are-supply-chains-and-they-security-8295f437061f" target="_blank">What are supply chains and how to secure them</a> : Security Lit Limited <br><br>
+            <a href="https://medium.com/@deepu0092/malware-analysis-for-beginners-cd4185516d90" target="_blank">Malware Analysis for Beginners</a> : Deepu <br><br>
+            <a href="https://medium.com/@the_harvester/how-i-exploited-4-vulnerabilities-in-a-website-3be6b28259cc" target="_blank">Took Down A School’s Website</a> : Ansh Vaid <br><br>
+            <a href="https://medium.com/@zackerthehacker/what-failing-the-100-days-of-code-taught-me-58edd6e05a4d" target="_blank">What failing the 100 Days of Code taught me</a> : Zac Braddy <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
