--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3162,6 +3162,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 174: June 23 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            OSCP Notes Preparation <br><br>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://thexssrat.medium.com/setting-up-burp-suite-b0a6767d3408" target="_blank">Setting Up Burp Suite</a> : Thexxsrat <br><br>
+            <a href="https://thexssrat.medium.com/a-hunters-methodology-v5-0-4f52c7744d32" target="_blank">A hunter’s methodology V5.0</a> : Thexssrat <br><br>
+            <a href="https://codewithvamp.medium.com/account-takeover-by-otp-bypass-ec0cff67f516" target="_blank">Account Takeover by OTP bypass</a> : Vaibhav Kumar Srivastava <br><br>
+            <a href="https://medium.com/@plaintextpasswords/stored-xss-cross-site-scripting-session-hijacking-f087dd3acd57" target="_blank">Stored XSS | Cross-Site Scripting | Session Hijacking</a> : Plaintext Passwords <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
