--- a/index.html
+++ b/index.html
@@ -66,19 +66,17 @@
       <br><br>
       <h1 id="work-exp" style="color:DodgerBlue">EXPERIENCE</h1> <br>
       <a href="https://hackersarcade.com/" target="_blank"><img src="/img/hackers-arcade.png" alt="HACKERS ARCADE" width="250" height="200"></a>
-      <p class="lead" style="color:red"><strong>(2021 - Current) Security Researcher at Hackers Arcade</strong></p>
+      <p class="lead" style="color:red"><strong>2021 - Current | Security Researcher @ Hackers Arcade</strong></p>
       <p>
         Hackers Arcade is an online platform where you can learn about cyber security through excellent learning resources and challenges. 
         It also involves security research and working on different projects that helps advance the cyber security community. 
-        Hackers Arcade contributed and is consistently contributing to the cybersecurity community by constantly teaching and uploading cybersecurity related content.
       </p>
       <br><br>
       <a href="https://rowdylink.utsa.edu/organization/comptiastudentchapter" target="_blank"><img src="/img/comptia.png" alt="COMPTIA" width="200" height="200"></a><br><br>
-      <p class="lead" style="color:red"><strong>(2022 - Current) Deputy Secretary at CompTIA Student Chapter, University of Texas at San Antonio</strong></p>
+      <p class="lead" style="color:red"><strong>2022 - Current | Competitions Coordinator @ CompTIA Student Chapter, University of Texas at San Antonio</strong></p>
       <p>
-        Serving as the Deputy Secretary at UTSA’s CompTIA Student Chapter club, the most outstanding new student organization in 2021 at UTSA.
-        Responsibilities include keeping track of club records which includes meetings, events, contact information and ensuring this information is
-        accessible. Assist President and VP in tasks they may need additional hands with.
+        - Responsible for coordinating all aspects that go into preparing for a cybersecurity competition. <br><br>
+        - Making certain that the policies, procedures, and objectives of the organization are followed in creating a high-quality competition. 
       </p>
       <!--
       <p class="lead" style="color:MediumSeaGreen"><strong>(2019 - 2020) Data Center Technician</strong></p>
