--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
     <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <title>Aditya's Personal Site</title>
+    <title>Aditya's Portfolio Site</title>
     <link rel="icon" href="/img/detective.png">
   </head>
   <body>
@@ -58,7 +58,7 @@
         <a href="https://www.linkedin.com/in/adityadindi/" target="_blank"><img src="/img/linkedln-img.png" class="img-fluid round" style="width:50px; height:50px"></a>&nbsp;<a href="https://github.com/Pyrus369" target="_blank"><img src="/img/github-img.png" class="img-fluid round" style="width:50px; height:50px"></a><a href="https://twitter.com/Pyrus369" target="_blank"><img src="/img/twitter-img.png" class="img-fluid round" style="width:50px; height:50px"></a><br><br><br><br>
         <h1 id="projects" style="color:DodgerBlue">PROJECTS</h1> <br>
       <small class="text-muted lead"><strong><!--<a href="/" class="text-decoration-none" target="_blank">-->Cyber Security Homelab</strong></a></small> <br><br>
-      <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Personal Website</strong></a></small> <br><br>
+      <small class="text-muted lead"><strong><a href="/" class="text-decoration-none" target="_blank">Portfolio Website</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="/WebPages/daily-2021.html" class="text-decoration-none" target="_blank">Daily Hacking Challenge 2021 / Daily Hacking Guide (Resources)</a></strong></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://writeups.adityadindi.com" class="text-decoration-none" target="_blank">Capture The Flag Writeups</strong></a></small> <br><br>
       <small class="text-muted lead"><strong><a href="https://github.com/Pyrus369/CyberSecurityProjects" class="text-decoration-none" target="_blank">CyberSecurity Projects using Python</strong></a></small> <br><br>
