--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -95,9 +95,9 @@
               <div class="dropdown-content">
                 <a href="#week23">Week 23</a>
                 <a href="#week24">Week 24</a>
-                <a href="#week25">Week 20</a>
+                <a href="#week25">Week 25</a>
+                <a href="#week21">Week 26</a>
                 <!--
-                <a href="#week21">Week 21</a>
                 <a href="#week22">Week 22</a>
                 -->
               </div>
@@ -3197,6 +3197,10 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 176: June 25 2022</h3><br><br><br>
+      <h2 id="week26">Week 26</h2> <br><br><br>
+      <h3>Day 177: June 26 2022</h3><br>
+      <p>Break Days</p><br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
