--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3200,7 +3200,26 @@
       <h3>Day 176: June 25 2022</h3><br><br><br>
       <h2 id="week26">Week 26</h2> <br><br><br>
       <h3>Day 177: June 26 2022</h3><br>
-      <p>Break Days</p><br><br>
+      <p>Break Day</p><br><br>
+      <h3>Day 178: June 25 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            OSCP Notes <br><br>
+            PWK Course <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://medium.com/@joshuaspeshock/tryhackme-networkminer-room-experience-96f56a0aea21" target="_blank">Tryhackme NetworkMiner Room Experience</a> : Joshua Speshock <br><br>
+            <a href="https://medium.com/@iamdevansharya/a-short-story-of-idor-6c651a0ff45a" target="_blank">A short story of IDOR</a> : iamdevansharya <br><br>
+            <a href="https://medium.com/@imdon2126/find-ssrf-lfi-xss-using-httpx-waybackurls-gf-gau-qsreplace-f4f589c7ee4c" target="_blank">Find SSRF , LFI , XSS using httpx , waybackurls , gf , gau , qsreplace</a> : Don Brown <br><br>
+            <a href="https://medium.com/@Dhamuharker/critical-git-repository-leaked-internal-data-9508e0476a0e" target="_blank">Critical Git Repository Leaked Internal Data</a> : Dhamotharan <br><br>
+            <a href="https://krishna-2098.medium.com/reverse-engineering-with-ghidra-e950d623209f" target="_blank">Reverse Engineering with GHIDRA.</a> : Krishna <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
