--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3201,7 +3201,7 @@
       <h2 id="week26">Week 26</h2> <br><br><br>
       <h3>Day 177: June 26 2022</h3><br>
       <p>Break Day</p><br><br>
-      <h3>Day 178: June 25 2022</h3><br>
+      <h3>Day 178: June 27 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
@@ -3216,6 +3216,25 @@
             <a href="https://medium.com/@imdon2126/find-ssrf-lfi-xss-using-httpx-waybackurls-gf-gau-qsreplace-f4f589c7ee4c" target="_blank">Find SSRF , LFI , XSS using httpx , waybackurls , gf , gau , qsreplace</a> : Don Brown <br><br>
             <a href="https://medium.com/@Dhamuharker/critical-git-repository-leaked-internal-data-9508e0476a0e" target="_blank">Critical Git Repository Leaked Internal Data</a> : Dhamotharan <br><br>
             <a href="https://krishna-2098.medium.com/reverse-engineering-with-ghidra-e950d623209f" target="_blank">Reverse Engineering with GHIDRA.</a> : Krishna <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 179: June 28 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            PWK Course <br><br>
+            <a href="https://tryhackme.com/room/adenumeration" target="_blank">Enumerating Active Directory</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://systemweakness.com/what-is-llmnr-poisoning-attack-and-how-to-secure-against-it-417f3b415e51" target="_blank">What is LLMNR Poisoning Attack?</a> : Prajwal Patil <br><br>
+            <a href="https://medium.com/@noli.mtz/what-is-kerberos-2d11d5c1f155" target="_blank">What is Kerberos?</a> : Martin Martinez <br><br>
+            <a href="https://corruptedprotocol.medium.com/elf-x86-stack-buffer-overflow-basic-6-rootme-app-system-introduction-to-ret2libc-83945accc435" target="_blank">ELF x86 — Stack buffer overflow basic 6 Rootme (App-System) (Introduction to Ret2libc)</a> : Hariharan@Blog:~$ <br><br>
+            <a href="https://corruptedprotocol.medium.com/h-cktivitycon-2021-ctf-the-library-ret2libc-aslr-bypass-a83a8207f237" target="_blank">H@cktivityCon 2021 CTF : The Library (Ret2libc : ASLR bypass)</a> : Hariharan@Blog:~$ <br><br>
+            <a href="https://infosecwriteups.com/how-i-was-able-to-takeover-3-shopify-subdomains-of-an-organization-867141854d37" target="_blank">How I was able to takeover 3 Subdomains of an Organization via Shopify?</a> : Sahil Ojha🇳🇵 <br><br>
           </p>      
         <br><br>
       </p>
