--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3239,6 +3239,24 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 180: June 29 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            PWK Course <br><br>
+            <a href="https://tryhackme.com/room/adenumeration" target="_blank">Enumerating Active Directory</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://medium.com/@plaintextpasswords/snooping-credentials-through-net-ntlmv2-hashcat-cracking-c5ebae10facb" target="_blank">Snooping credentials through Net-NTLMv2 | HashCat Cracking</a> : Plaintext Passwords <br><br>
+            <a href="https://medium.com/r3d-buck3t/enumerating-access-controls-in-active-directory-c06e2efa8b89" target="_blank">Enumerating Access Controls in Active Directory</a> : Nairuz Abulhul <br><br>
+            <a href="https://solwitsa.medium.com/cyber-security-in-embedded-systems-is-just-like-a-digital-fortress-33f2b39912a9" target="_blank">Cyber Security in Embedded Systems is just like a Digital Fortress</a> : Solwit S.A. <br><br>
+            <a href="https://ain-kun.medium.com/tcmsecurity-dev-write-up-eee565738e78" target="_blank">TCMSecurity | Dev | Write-up</a> : Hussain <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
