--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3257,6 +3257,23 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 181: June 30 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+            <a href="https://tryhackme.com/room/adenumeration" target="_blank">Enumerating Active Directory</a> : TryHackMe <br><br>
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://infosecwriteups.com/html-and-hyperlink-injection-via-share-option-in-microsoft-onenote-application-47e94d0e6478" target="_blank">HTML and Hyperlink Injection via Share Option In Microsoft Onenote Application</a> : Divyanshyu Shakla <br><br>
+            <a href="https://medium.com/@withamankr/microsoft-hall-of-fame-for-a-small-misconfiguration-a0bb2eda9441" target="_blank">Microsoft Hall of Fame for a Small Misconfiguration.</a> : Aman <br><br>
+            <a href="https://tamirsuliman.medium.com/my-journey-to-the-dark-web-1408ab947dbd" target="_blank">My Journey to the Dark Web</a> : Tamir Suliman <br><br>
+            <a href="https://a51f221b.medium.com/basics-of-assembly-language-part-3-1a862ec4156c" target="_blank">Basics of Assembly language : Part 3</a> : A51F221B <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
