--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3274,6 +3274,43 @@
         <br><br>
       </p>
       <br><br>
+      <h3>Day 182: July 1 2022</h3><br>
+      <p>
+        <h5>Blogs Reads</h5>
+          <p>   
+            <a href="https://medium.com/@0xP/offensive-security-getting-your-foothold-in-the-industry-ac0267cf77a0" target="_blank">Offensive Security: Getting Your Foothold In The Industry</a> : 0xP <br><br>
+            <a href="https://medium.com/@prcooltechzone/how-your-laptop-can-be-hacked-at-the-airport-b69c7373af78" target="_blank">How your laptop can be hacked at the Airport</a> : CoolTechZone - Cyber Security Labs & News <br><br>
+            <a href="https://medium.com/@shakti.gtp/an-out-of-scope-domain-leads-to-a-critical-bug-1500-f228d2c7db4b" target="_blank">An Out Of Scope domain Leads To a Critical Bug[$1500]</a> : shakti mohanty <br><br>
+            <a href="https://kylemistele.medium.com/impacket-deep-dives-vol-2-attacking-kerberos-922e8cdd472a" target="_blank">Impacket Deep Dives Vol. 2: Attacking Kerberos</a> : Kyle Mistele <br><br>
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
+      <h3>Day 183: July 2</h3><br>
+      <p>Break Day</p>
+      <br><br>
+      <h2 id="week27">Week 27</h2> <br><br><br>
+      <h3>Day 184: July 3 2022 - Day 185: July 4 2022</h3><br>
+      <p>
+        Break Days <br><br>
+      </p>
+      <br><br>
+      <!--
+      <h3>Day 186: July 5 2022</h3><br>
+      <p>
+        <h5>My Activities</h5>
+          <p>
+
+          </p>
+        <br><br>
+        <h5>Blogs Reads</h5>
+          <p>   
+
+          </p>      
+        <br><br>
+      </p>
+      <br><br>
+      -->
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
