--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3295,8 +3295,11 @@
         Break Days <br><br>
       </p>
       <br><br>
+      <h3>Day 186: July 5 - Day 187: July 6</h3><br>
+      <p>Break Days</p>
+      <br><br>
       <!--
-      <h3>Day 186: July 5 2022</h3><br>
+      <h3>Day 187: July 6 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
