--- a/WebPages/daily-2022.html
+++ b/WebPages/daily-2022.html
@@ -3298,22 +3298,25 @@
       <h3>Day 186: July 5 - Day 187: July 6</h3><br>
       <p>Break Days</p>
       <br><br>
-      <!--
-      <h3>Day 187: July 6 2022</h3><br>
+      <h3>Day 188: July 7 2022</h3><br>
       <p>
         <h5>My Activities</h5>
           <p>
-
+            <a href="https://tryhackme.com/room/adenumeration" target="_blank">Enumerating Active Directory</a> : TryHackMe <br><br>
           </p>
         <br><br>
         <h5>Blogs Reads</h5>
           <p>   
-
+            <a href="https://infosecwriteups.com/lets-understand-ssrf-vulnerability-6f1d28b228f9" target="_blank">Let’s Understand SSRF vulnerability</a> : Security Lit Limited <br><br>
+            <a href="https://warnerchad.medium.com/osint-ctfs-9993129c10c7" target="_blank">OSINT CTFs</a> : Chad Warner <br><br>
+            <a href="https://musyokaian.medium.com/annie-tryhackme-walkthrough-608ba78d2cd" target="_blank">Annie TryHackMe Walkthrough</a> : Musyoka Ian <br><br>
+            <a href="https://medium.com/@gd_daredevil/how-i-hacked-wi-fi-at-railway-station-to-get-free-internet-a82cad29bb93" target="_blank">How I ‘hacked’ Wi-Fi at Railway Station to get free internet?</a> : Ganesh Datta <br><br>
+            <a href="https://popalltheshells.medium.com/how-i-hacked-a-health-institution-domain-admin-compromise-34ec3e5debb5" target="_blank">HOW I HACKED A HEALTH INSTITUTION [Domain Admin Compromise]</a> : popalltheshells <br><br>
+            <a href="https://medium.com/@plaintextpasswords/stack-buffer-overflow-to-remote-code-execution-bof-rce-c4e323f3d9ef" target="_blank">Stack Buffer Overflow to Remote Code Execution | BOF RCE</a> : Plaintext Passwords <br><br>
           </p>      
         <br><br>
       </p>
       <br><br>
-      -->
       <p>Copyright © 2022 Aditya Dindi</p>
       </div> 
     </div>
